tests/paczka1/small_fuzzy/85857198.err
Error in line 9: 3KCz S328 2,0
Error in line 13: 3KCz S388 12,0
